@@ -3,7 +3,7 @@ name = Module-Provision
 [Prereqs]
 perl                  = 5.010001
 local::lib            = 1.008004
-namespace::sweep      = 0.006
+namespace::autoclean  = 0.19
 Class::Null           = 2.101420
 Class::Usul           = v0.42.0
 Config::Tiny          = 2.13
@@ -15,7 +15,7 @@ Dist::Zilla::Plugin::LicenseFromModule     = 0.03
 Dist::Zilla::Plugin::ManifestInRoot        = v0.1.0
 Dist::Zilla::Plugin::Meta::Dynamic::Config = 0.04
 Dist::Zilla::Plugin::ModuleBuild::Custom   = 4.16
-Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.133290
+Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.141760
 Dist::Zilla::Plugin::Signature             = 1.100930
 Dist::Zilla::Plugin::VersionFromModule     = 0.08
 File::DataClass       = v0.39.0
